<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navi_menu_set_profile"
        android:title="@string/set_profile"/>

    <item
        android:id="@+id/navi_menu_my_coupon_deal_list"
        android:title="@string/my_coupon_deal_list" />

    <item
        android:id="@+id/navi_menu_my_coupon_share_list"
        android:title="@string/my_coupon_share_list"/>

    <item
        android:id="@+id/navi_menu_receipt_photo"
        android:title="@string/receipt_photo"/>

    <item
        android:id="@+id/navi_menu_my_coupon_deal_board"
        android:title="@string/coupon_deal_board"/>

    <item
        android:id="@+id/navi_menu_my_coupon_share_board"
        android:title="@string/coupon_share_board"/>


</menu>