<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/navi_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="LabelFor">


            <Button
                android:id="@+id/navi_menu_set_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/set_profile"/>

            <Button
                android:id="@+id/navi_menu_my_coupon_deal_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/my_coupon_deal_list"/>

            <Button
                android:id="@+id/navi_menu_my_coupon_share_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/my_coupon_share_list"/>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"/>

            <Button
                android:id="@+id/navi_menu_receipt_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/receipt_photo"/>

            <Button
                android:id="@+id/navi_menu_my_coupon_deal_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/coupon_deal_board"/>

            <Button
                android:id="@+id/navi_menu_my_coupon_share_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/coupon_share_board"/>


        </LinearLayout>

    </RelativeLayout>






</RelativeLayout>