<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_logout_title"
            android:textSize="46sp"/>

        <TextView
            android:id="@+id/logout_description"
            android:layout_below="@id/logout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/activity_logout_description"/>

        <LinearLayout
            android:id="@+id/logout_select_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout_description"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logout_accept"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/activity_logout_accept"/>

            <Button
                android:id="@+id/logout_decline"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/activity_logout_decline"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>