<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/navi_header_not_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/navi_title"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/menu_signin_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/navi_header_not_login_title"
        android:background="@drawable/border"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/sigin_in"/>

    <Button
        android:id="@+id/menu_signup_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/menu_signin_button"
        android:background="@drawable/border"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/sigin_up"/>




</RelativeLayout>