<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="620dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_title"
            android:textSize="46sp"/>

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_title"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            tools:ignore="LabelFor">

            <TextView
                android:id="@+id/id_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_id" />

            <EditText
                android:id="@+id/id_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:autofillHints="username"
                android:inputType="text"/>

            <TextView
                android:id="@+id/password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_password" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:autofillHints="password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_name" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:autofillHints="name"
                android:inputType="text"/>

            <TextView
                android:id="@+id/email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_email" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"/>

            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"/>

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_gender" />

            <EditText
                android:id="@+id/gender_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <TextView
                android:id="@+id/age_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_age" />

            <EditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <TextView
                android:id="@+id/image_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/activity_register_image" />

            <EditText
                android:id="@+id/image_input"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/border"
                android:importantForAutofill="no"
                android:inputType="none"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/profile"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/activity_register_signup" />
    </RelativeLayout>






</RelativeLayout>